--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -17,6 +17,8 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  dynamic_theme: ^1.0.1
+  path_provider: ^1.5.1
   flutter:
     sdk: flutter
 
