--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -19,6 +19,7 @@ environment:
 dependencies:
   dynamic_theme: ^1.0.1
   path_provider: ^1.5.1
+  flutter_material_color_picker: ^1.0.5
   flutter:
     sdk: flutter
 
