--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  google_fonts: ^0.3.5
   dynamic_theme: ^1.0.1
   path_provider: ^1.5.1
   flutter_material_color_picker: ^1.0.5
@@ -40,7 +41,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -48,9 +48,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
+  #   - fonts/RobotoSla-Regular.ttf
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
+  # assets:
+  #   - google_fonts
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
@@ -63,10 +65,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
-  #   - family: Schyler
+  #   - family: RobotoSlab
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  #       - asset: fonts/RobotoSlab-Regular.ttf
+        # - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
