--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  flutter_share: ^1.0.2+1
   google_fonts: ^0.3.5
   dynamic_theme: ^1.0.1
   path_provider: ^1.5.1
