--- a/myapp/pubspec.yaml
+++ b/myapp/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   audio_recorder: ^1.0.1
   audioplayers: ^0.14.0
   dynamic_theme: ^1.0.1
+  flare_splash_screen: ^3.0.1
   flutter_launcher_icons: ^0.7.5
   flutter_material_color_picker: ^1.0.5
   flutter_spinkit: "^2.1.0"
@@ -54,7 +55,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - lib/asset/animation/MyMic.flr
   #   - fonts/RobotoSla-Regular.ttf
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
