--- a/myapp/android/app/src/main/AndroidManifest.xml
+++ b/myapp/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="mymic"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
